--- a/part-1/.gitmodules
+++ b/part-1/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "part-1/part-1/MathPixJS"]
-	path = part-1/part-1/MathPixJS
+[submodule "MathPixJS"]
+	path = MathPixJS
 	url = https://github.com/dlandy/MathPixJS.git
