--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "part-1/MathPixJS"]
+	path = part-1/MathPixJS
+	url = https://github.com/dlandy/MathPixJS.git
 [submodule "part-1/part-1/MathPixJS"]
 	path = part-1/part-1/MathPixJS
 	url = https://github.com/dlandy/MathPixJS.git
